fix broken sticky due overflow

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -56,6 +56,14 @@ body {
   padding: 0;
   background-color: var(--color-background, #{$color-background});
   transition: background-color $transition-default;
+
+  &.single,
+  &.page {
+    --color-background-wrapper: var(--color-background);
+  }
+}
+.wrapper {
+  background-color: var(--color-background-wrapper);
 }
 
 *,
@@ -68,30 +76,6 @@ img {
   display: block;
   width: 100%;
   height: auto;
-}
-
-.wrapper {
-  background-color: var(--color-background);
-
-  .single > &,
-  .page > & {
-    border-radius: 4rem;
-    margin-top: var(--gutter);
-    overflow: auto;
-
-    &::before {
-      z-index: -1;
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: block;
-      content: '';
-      pointer-events: none;
-      width: 100%;
-      height: 100vh;
-      background-color: rgba(var(--color-background-overlay-rgb), 0.5);
-    }
-  }
 }
 
 .bg-inverted {
